--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+<title>Фотограф Воронеж</title>
 <body>
-    <p>style</p>
+<header>
+  <div class="wrap">
+ <div class="header">
+<div class="logo">
+  <a href=""><img src="logo.png" alt=""/></a>
+ </div>
+          <div class="nav">
+  <ul>
+   <li class="active"><a href="index.html">Портфолио</a></li>
+   <li><a href="прайс.html">Прайс</a></li>
+   <li><a href="контакты.html">Контакты</a></li>
+  </ul>
+ </div>
+ <div class="clear"></div> 
+ </div>
+ </div>
+</header>
+<section>
+<h1>ФОТОГРАФ ВОРОНЕЖ</h1>
+<hr>
+<h2>Ольга Мирошниченко</h2>
+<p>На данной странице вы можете ознакомиться с моими работами.</p>
+
+<div class="row">
+  <div class="column">
+    <div class="content">
+    <a target="_blank"  href="чб фото.jpg">
+      <img src="чб фото.jpg" alt="Чб фото">
+    </a>  
+      <h3>Мужская фотография</h3>
+      <p>Мужской портрет, да и вообще мужские фотографии пользуются большой популярностью не только среди сильной половины человечества, но и среди женщин. Правильно сделанный портрет парня будет красиво и эффектно выглядеть, подчёркивая мужество и брутальность.</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+  <a target="_blank"  href="портрет.jpg">
+    <img src="портрет.jpg" alt="Портрет">
+  </a>
+      <h3>Женская фотография</h3>
+      <p>Женщина как главный объект фотографии - идея не новаторская, но до сих пор актуальная и столь же вечная, как и тема любви или музыки. Женский портрет – это популярный жанр современного фотоискусства, интересный и любимый для многих фотографов.</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+  <a target="_blank"  href="love story.jpg">
+    <img src="love story.jpg" alt="Love story">
+  </a>
+      <h3>Love story</h3>
+      <p>Love story съемка – важное, трепетное и запоминающееся событие, словно первое свидание, которое поможет наглядно выразить на фотографиях любовь.</p>
+    </div>
+  </div>
+  <div class="column">
+    <div class="content">
+  <a target="_blank"  href="Вероника.jpg">
+    <img src="Вероника.jpg" alt="Вероника">
+  </a>
+      <h3>Детская фотография</h3>
+      <p>Детские фотографии – это иногда смешные, порой серьезные, но всегда очень яркие, интересные и неповторимые кадры. Они являются лучшим способом вернуться в прошлое, ведь такие ясные глаза и беззаботную улыбку, как у ребенка, редко встретишь у взрослого человека.</p>
+    </div>
+ </div>
+</div>
+</section>
 </body>
 </html>
+
+
