--- a/портфолио.html
+++ b/портфолио.html
@@ -10,7 +10,7 @@
   <div class="wrap">
  <div class="header">
 <div class="logo">
-  <a href=""><img src="https://github.com/olgamir000/dgdg/blob/main/img/logo.png" alt=""/></a>
+  <a href=""><img src="img/logo.png" alt=""/></a>
  </div>
           <div class="nav">
   <ul>
