--- a/портфолио.html
+++ b/портфолио.html
@@ -51,7 +51,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="love story.jpg">
-    <img src="https://github.com/olgamir000/dgdg/blob/main/img/love%20story.JPG" alt="Love story">
+    <img src="/img/lovestory.jpg" alt="Love story">
   </a>
       <h3>Love story</h3>
       <p>Love story съемка – важное, трепетное и запоминающееся событие, словно первое свидание, которое поможет наглядно выразить на фотографиях любовь.</p>
