--- a/портфолио.html
+++ b/портфолио.html
@@ -42,7 +42,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="портрет.jpg">
-    <img src="/img/портрет.JPG" alt="Портрет">
+    <img src="img/портрет.JPG" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
       <p>Женщина как главный объект фотографии - идея не новаторская, но до сих пор актуальная и столь же вечная, как и тема любви или музыки. Женский портрет – это популярный жанр современного фотоискусства, интересный и любимый для многих фотографов.</p>
