--- a/прайс.html
+++ b/прайс.html
@@ -11,7 +11,7 @@
   <div class="wrap">
  <div class="header">
 <div class="logo">
-  <a href=""><img src="logo.png" alt=""/></a>
+  <a href=""><img src="img/logo.png" alt=""/></a>
  </div>
           <div class="nav">
   <ul>
