--- a/прайс.html
+++ b/прайс.html
@@ -29,7 +29,7 @@
 	<h2>Прайс</h2>
 	<p>На данной странице вы можете ознакомиться с условиями и ценами на съёмки, и выбрать подходящий для вас вариант.</p>
 		<article class="grid">
-			<img src="дама.jpg" width="220px" height="228px" alt="">
+			<img src="img/дама.jpg" width="220px" height="228px" alt="">
 				 <h3>Индивидуальная съёмка</h3>
 <p>Съёмка - 1 час.</p>
 <p>В результате съёмки вы получаете все удачные кадры в цветокоррекции.</p>
@@ -38,7 +38,7 @@
 
 </article>
 		<article class="grid">
-			<img  src="пара.jpg" width="220px" height="228px" alt="">
+			<img  src="img/пара.jpg" width="220px" height="228px" alt="">
 				<h3>Love story</h3>
 <p>Съёмка - 1 час.</p>
 <p>В результате съёмки вы получаете все удачные кадры в цветокоррекции.</p>
@@ -46,7 +46,7 @@
 <p>Стоимость - 3000</p>
 		</article>
 		<article class="grid">
-			<img src="ребенок.jpg" width="220px" height="228px" alt="">
+			<img src="img/ребенок.jpg" width="220px" height="228px" alt="">
 				<h3>Детская съёмка</h3>
 <p>Съёмка - 1 час.</p>
 <p>В результате съёмки вы получаете все удачные кадры в цветокоррекции.</p>
