--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrap">
  <div class="header">
 <div class="logo">
-  <a href=""><img src="logo.png" alt=""/></a>
+  <a href=""><img src="img/logo.png" alt=""/></a>
  </div>
           <div class="nav">
   <ul>
@@ -33,7 +33,7 @@
   <div class="column">
     <div class="content">
     <a target="_blank"  href="чб фото.jpg">
-      <img src="чб фото.jpg" alt="Чб фото">
+      <img src="img/чб фото.jpg" alt="Чб фото">
     </a>  
       <h3>Мужская фотография</h3>
       <p>Мужской портрет, да и вообще мужские фотографии пользуются большой популярностью не только среди сильной половины человечества, но и среди женщин. Правильно сделанный портрет парня будет красиво и эффектно выглядеть, подчёркивая мужество и брутальность.</p>
@@ -42,7 +42,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="портрет.jpg">
-    <img src="портрет.jpg" alt="Портрет">
+    <img src="img/портрет.jpg" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
       <p>Женщина как главный объект фотографии - идея не новаторская, но до сих пор актуальная и столь же вечная, как и тема любви или музыки. Женский портрет – это популярный жанр современного фотоискусства, интересный и любимый для многих фотографов.</p>
@@ -51,7 +51,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="love story.jpg">
-    <img src="love story.jpg" alt="Love story">
+    <img src="img/love story.jpg" alt="Love story">
   </a>
       <h3>Love story</h3>
       <p>Love story съемка – важное, трепетное и запоминающееся событие, словно первое свидание, которое поможет наглядно выразить на фотографиях любовь.</p>
@@ -59,7 +59,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="Вероника.jpg">
+  <a target="_blank"  href="img/Вероника.jpg">
     <img src="Вероника.jpg" alt="Вероника">
   </a>
       <h3>Детская фотография</h3>
