--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="row">
   <div class="column">
     <div class="content">
-    <a target="_blank"  href="чб фото.jpg">
+    <a target="_blank"  href="чб фото.JPG">
       <img src="img/чб фото.jpg" alt="Чб фото">
     </a>  
       <h3>Мужская фотография</h3>
@@ -42,7 +42,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="портрет.jpg">
-    <img src="img/портрет.jpg" alt="Портрет">
+    <img src="img/портрет.JPG" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
       <p>Женщина как главный объект фотографии - идея не новаторская, но до сих пор актуальная и столь же вечная, как и тема любви или музыки. Женский портрет – это популярный жанр современного фотоискусства, интересный и любимый для многих фотографов.</p>
@@ -50,7 +50,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="love story.jpg">
+  <a target="_blank"  href="love story.JPG">
     <img src="img/love story.jpg" alt="Love story">
   </a>
       <h3>Love story</h3>
@@ -59,7 +59,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="img/Вероника.jpg">
+  <a target="_blank"  href="img/Вероника.JPG">
     <img src="Вероника.jpg" alt="Вероника">
   </a>
       <h3>Детская фотография</h3>
