--- a/портфолио.html
+++ b/портфолио.html
@@ -33,7 +33,7 @@
   <div class="column">
     <div class="content">
     <a target="_blank"  href="чб фото.jpg">
-      <img src="img/чб фото.jpg" alt="Чб фото">
+      <img src="img/чб фото.JPG" alt="Чб фото">
     </a>  
       <h3>Мужская фотография</h3>
       <p>Мужской портрет, да и вообще мужские фотографии пользуются большой популярностью не только среди сильной половины человечества, но и среди женщин. Правильно сделанный портрет парня будет красиво и эффектно выглядеть, подчёркивая мужество и брутальность.</p>
@@ -51,7 +51,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="love story.jpg">
-    <img src="img/love story.jpg" alt="Love story">
+    <img src="img/love story.JPG" alt="Love story">
   </a>
       <h3>Love story</h3>
       <p>Love story съемка – важное, трепетное и запоминающееся событие, словно первое свидание, которое поможет наглядно выразить на фотографиях любовь.</p>
@@ -60,7 +60,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="Вероника.jpg">
-    <img src="img/Вероника.jpg" alt="Вероника">
+    <img src="img/Вероника.JPG" alt="Вероника">
   </a>
       <h3>Детская фотография</h3>
       <p>Детские фотографии – это иногда смешные, порой серьезные, но всегда очень яркие, интересные и неповторимые кадры. Они являются лучшим способом вернуться в прошлое, ведь такие ясные глаза и беззаботную улыбку, как у ребенка, редко встретишь у взрослого человека.</p>
