--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <div class="column">
     <div class="content">
   <a target="_blank"  href="img/Вероника.JPG">
-    <img src="Вероника.JPG" alt="Вероника">
+    <img src="img/Вероника.JPG" alt="Вероника">
   </a>
       <h3>Детская фотография</h3>
       <p>Детские фотографии – это иногда смешные, порой серьезные, но всегда очень яркие, интересные и неповторимые кадры. Они являются лучшим способом вернуться в прошлое, ведь такие ясные глаза и беззаботную улыбку, как у ребенка, редко встретишь у взрослого человека.</p>
