--- a/контакты.html
+++ b/контакты.html
@@ -41,7 +41,7 @@
     <div class="ico-wrap"> <i class="fa fa-clock-o ico-contact"></i>
     </div>
     <div class="descript-wrapper">
-        <h4 class="aio-icon-title">Социальные сети:</h4>
+        <h4 class="aio-icon-title">Время работы:</h4>
         <div class="aio-icon-description">
             Можете писать и звонить в любой день недели,
             <br>желательно с 8.00 до 21.00</div>
