--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div class="row">
   <div class="column">
     <div class="content">
-    <a target="_blank"  href="чб фото.JPG">
+    <a target="_blank"  href="img/чб фото.JPG">
       <img src="img/чб фото.JPG" alt="Чб фото">
     </a>  
       <h3>Мужская фотография</h3>
@@ -41,7 +41,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="портрет.jpg">
+  <a target="_blank"  href="img/портрет.jpg">
     <img src="img/портрет.JPG" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
@@ -50,7 +50,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="love story.JPG">
+  <a target="_blank"  href="img/love story.JPG">
     <img src="img/love story.JPG" alt="Love story">
   </a>
       <h3>Love story</h3>
