--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="img/портрет.jpg">
+  <a target="_blank"  href="img/портрет.JPG">
     <img src="img/портрет.JPG" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
