--- a/портфолио.html
+++ b/портфолио.html
@@ -32,7 +32,7 @@
 <div class="row">
   <div class="column">
     <div class="content">
-    <a target="_blank"  href="чб фото.jpg">
+    <a target="_blank"  href="img/чб фото.JPG">
       <img src="img/чб фото.JPG" alt="Чб фото">
     </a>  
       <h3>Мужская фотография</h3>
@@ -41,7 +41,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="портрет.JPG">
+  <a target="_blank"  href="img/портрет.JPG">
     <img src="img/портрет.JPG" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
@@ -50,7 +50,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="love story.jpg">
+  <a target="_blank"  href="img/love story.JPG">
     <img src="img/love story.JPG" alt="Love story">
   </a>
       <h3>Love story</h3>
@@ -59,7 +59,7 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="Вероника.jpg">
+  <a target="_blank"  href="img/Вероника.JPG">
     <img src="img/Вероника.JPG" alt="Вероника">
   </a>
       <h3>Детская фотография</h3>
