--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <div class="row">
   <div class="column">
     <div class="content">
-    <a target="_blank"  href="img/чб фото.JPG">
-      <img src="img/чб фото.JPG" alt="Чб фото">
+    <a target="_blank"  href="img/чб фото.jpg">
+      <img src="img/чб фото.jpg" alt="Чб фото">
     </a>  
       <h3>Мужская фотография</h3>
       <p>Мужской портрет, да и вообще мужские фотографии пользуются большой популярностью не только среди сильной половины человечества, но и среди женщин. Правильно сделанный портрет парня будет красиво и эффектно выглядеть, подчёркивая мужество и брутальность.</p>
@@ -41,8 +41,8 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="img/портрет.JPG">
-    <img src="img/портрет.JPG" alt="Портрет">
+  <a target="_blank"  href="img/портрет.jpg">
+    <img src="img/портрет.jpg" alt="Портрет">
   </a>
       <h3>Женская фотография</h3>
       <p>Женщина как главный объект фотографии - идея не новаторская, но до сих пор актуальная и столь же вечная, как и тема любви или музыки. Женский портрет – это популярный жанр современного фотоискусства, интересный и любимый для многих фотографов.</p>
@@ -50,8 +50,8 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="img/love story.JPG">
-    <img src="img/love story.JPG" alt="Love story">
+  <a target="_blank"  href="img/love story.jpg">
+    <img src="img/love story.jpg" alt="Love story">
   </a>
       <h3>Love story</h3>
       <p>Love story съемка – важное, трепетное и запоминающееся событие, словно первое свидание, которое поможет наглядно выразить на фотографиях любовь.</p>
@@ -59,8 +59,8 @@
   </div>
   <div class="column">
     <div class="content">
-  <a target="_blank"  href="img/Вероника.JPG">
-    <img src="img/Вероника.JPG" alt="Вероника">
+  <a target="_blank"  href="img/Вероника.jpg">
+    <img src="img/Вероника.jpg" alt="Вероника">
   </a>
       <h3>Детская фотография</h3>
       <p>Детские фотографии – это иногда смешные, порой серьезные, но всегда очень яркие, интересные и неповторимые кадры. Они являются лучшим способом вернуться в прошлое, ведь такие ясные глаза и беззаботную улыбку, как у ребенка, редко встретишь у взрослого человека.</p>
